--- a/PORTAFOLIO/src/styles/Footer.css
+++ b/PORTAFOLIO/src/styles/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #121212;
+  background-color: #d9dae2;
   color: #fff;
   padding: 40px 20px;
   display: flex;
@@ -24,7 +24,7 @@
   padding-top: 100px;
   text-align: center;
   margin: 0;
-  color: #fff;
+  color: #333;
 }
 
 .footer-formulario {
@@ -52,8 +52,8 @@
 }
 
 .footer-formulario button {
-  background-color: #e97b64;
-  color: white;
+  background-color: rgb(218, 190, 185);
+  color: #333;
   border: none;
   border-radius: 5px;
   padding: 10px;
@@ -63,7 +63,7 @@
 }
 
 .footer-formulario button:hover {
-  background-color: #e7bfb7;
+  background-color: #e97b64;
 }
 
 .footer-redes {
@@ -75,11 +75,12 @@
 }
 
 .footer-redes a {
-  color: #fff;
+  color: #333;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 22px;
+  font-family: monospace;
 }
 
 .footer-redes a:hover {
-  color: #007bff;
+  color:  #e97b64;
 }
