--- a/PORTAFOLIO/src/styles/SobreMi.css
+++ b/PORTAFOLIO/src/styles/SobreMi.css
@@ -22,7 +22,7 @@
   .sobre-mi h2 {
     font-family: "Courier New";
     font-size: 40px;
-    color: #777;
+    color: #e97b64;
     margin-bottom: 30px;
   }
   
@@ -37,15 +37,9 @@
     font-size: 18px;
     line-height: 1.6;
     color: #444;
-    text-align: left;
-    
+    text-align: justify;
+    font-family: monospace;
   }
 
-  
-  .sobre-mi .linea-horizontal {
-    width: 80%;
-    height: 2px;
-    background-color: #dcdcdc;
-    margin: 30px auto;
-  }
+
   
